전남대 BE_임강범 3주차 과제 (2단계) (#325)
* style: reformatting code

* style: reformatting code

* refactor(repository): delete Access Modifier

* feat(service): add entityToDto and dtoToEntity methods

* feat(dto): delete toWishEntity

* feat(dto): delete toMemberEntity and setter

* feat(entity): Add bidirectional association

* chore(controller): rename methods

* chore(service): rename methods

* feat(entity): add association methods

* feat(entity): delete constructor and add removeWishEntity

* feat(entity): add removeWishEntity

* refactor(domain): refactor constructor

* test: modify WishServiceTest

* refactor(service): modify methods due to association

* test: refactor WishRepositoryTest

* style: reformatting code

* refactor(service): remove duplicate code